# ugip2025

./: .gitignore  README.md
barrier-free-backend/: .env  app.py  config.py  pyproject.toml
barrier-free-backend/api/routes/: directions.py  ocr.py  stations.py
barrier-free-backend/api/utils/: ai_utils.py  data_loader.py  geo_utils.py
barrier-free-backend/data/: stations.json
barrier-free-frontend/: .env  index.html  package-lock.json  package.json
barrier-free-frontend/src/: App.jsx
barrier-free-frontend/src/api/: directionsApi.js
barrier-free-frontend/src/components/: Map.jsx  OcrUploader.jsx  Routeinfo.jsx  SearchBar.jsx  SupplementaryInfo.jsx
barrier-free-frontend/src/pages/: Home.jsx
barrier-free-frontend/src/styles/: global.css
